Keep fallback test Java 8 compatible